--- a/index.html
+++ b/index.html
@@ -2,13 +2,77 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
+    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+     <link href="bootstrap/css/bootstrap-grid.css" rel="stylesheet">
+     <link href="bootstrap/css/bootstrap-grid.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="css/style.css" rel="stylesheet">
 </head>
-<body>
-<h1>priscaMuli</h1>
-<h2>priscaMuli</h2>
-<h3>Priscamuli</h3>
-<h4>Priscamuli</h4>
-<h5>Priscamuli</h5>
+<body style=" padding-top: 56px;">
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Personal Portfolio</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="Nav">
+            <ul class="nav justify-content-end">
+                <li class="nav-item justify-content-end">
+                    <a class="nav-link" href="#skillsDiv">About Me</a>
+                </li>
+                <li class="nav-item justify-content-end">
+                    <a class="nav-link" href="public/contact.html">Contact Me</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+        <div class="container-fluid">
+    <div class="grid-container">
+        </div>
+         <div id="headDiv">
+             <div class="text-center">
+                 <p>I am Prisca</p>
+                 <p>Welcome to my portfolio</p>
+  <img src="assets/prisca.jpg" class="rounded" alt="my photo" width="250";length="250">
+</div>
+         </div>
+         <div id="taglineDiv">
+              <h2>Passionate About Design and Development</h2>
+         </div>
+         <div id="skillsDiv">
+              <div class="row justify-content-evenly">
+                  <h2>About Me</h2>
+    <div class="col-4">
+        <h3>Skills</h3>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>Python</li>
+                </ul>
+    </div>
+    <div class="col-4">
+       <h3>Hobbies</h3>
+                <ul>
+                    <li>Photography</li>
+                    <li>Cycling</li>
+                    <li>Traveling</li>
+                    <li>Reading</li>
+                </ul>
+    </div>
+  </div>
+</div>
+         </div>
+         <div id="footerDiv">
+             <p>Connect with me:</p>
+             <ul>
+        <li><a href="https://linkedin.com" target="Prisca Muli">LinkedIn</a></li>
+            <li> <a href="https://x.com" target="Prisca">x-twitter</a></li>
+        <li><a href="https://instagram.com" target="prisca">instagram</a></li>
+             </ul>
+         </div>
 </body>
 </html>
